# CovidDetector

./: .gitignore  README.md  covid_notebook.ipynb  pyproject.toml
covid/: data.py  metrics.py  model.py  module.py  train.py
