[tool.poetry]
name = "covid"
version = "0.1.0"
description = ""
authors = ["Maicol Rodrigues <maicol.rodrigues@heyscience.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
torch = "^2.4.1"
torchvision = "^0.19.1"
pytorch-lightning = "^2.4.0"
scikit-learn = "^1.5.2"
mlflow = "^2.16.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
